Gestione Uris a seconda del file in implementazione

--- a/KazeWebPage/View/Post.html
+++ b/KazeWebPage/View/Post.html
@@ -1,2 +1,21 @@
-
-<p>L'id = :|§id§|: serve a indicare una cosa specifica<p/>
+<div data-aos="zoom-in-up" class="slidein row tm-section-mb row align-items-center">
+    <div class="col-lg-8">
+        <div class="tm-timeline-item col-lg-11" align="center">
+            <div class="tm-timeline-item-inner">
+                <div class="tm-timeline-description-wrap" align="center">
+                    <div class="tm-bg-dark tm-timeline-description">
+                        <h3 class="tm-text-green tm-font-400">:|§title§|:</h3>
+                                :|§uri_img§|:
+                                <br>
+                            <p>:|§description§|:</p>
+                        <span class="tm-text-green">Comments :|§nComments§|: - :|§dateCreated§|:</span>
+                        <br>
+                        <span class="tm-text-green" style="font-size:13px">TAGS = :|§tags§|:</span>
+                        <p><a class="tm-text-green float-right" style="font-size:20px" href="">View full post</a></p>
+                        
+                    </div> 
+                </div> 
+            </div>
+        </div>
+    </div>
+ </div>
