--- a/KazeWebPage/View/Uris_View/File_Uri_View.html
+++ b/KazeWebPage/View/Uris_View/File_Uri_View.html
@@ -1,4 +1,4 @@
-<a style="font-size:17px" href=":|§uri_file§|:">
+<a style="font-size:17px" href=":|§File_Uri§|:">
     <div>
         <img src= "https://i.postimg.cc/Z5ZYBBPB/HlrAzXK.png"  alt="file_image" height="60px" width="60px">
         <p> {{ post.uris[0].split("/")[-1] }} </p>
