--- a/KazeWebPage/View/Uris_View/Video_Uri_View.html
+++ b/KazeWebPage/View/Uris_View/Video_Uri_View.html
@@ -1,3 +1,3 @@
 <video width="500px" height="500px" controls muted autoplay>
-    <source src=":|§uri_vid§|:" type="video/mp4">
+    <source src=":|§Video_Uri§|:" type="video/mp4">
 </video>
