Fine gestione chiamate, da aggiungere gli eventi

--- a/KazeWebPage/View/Post.html
+++ b/KazeWebPage/View/Post.html
@@ -5,7 +5,7 @@
                 <div class="tm-timeline-description-wrap" align="center">
                     <div class="tm-bg-dark tm-timeline-description">
                         <h3 class="tm-text-green tm-font-400">:|§title§|:</h3>
-                                :|§uri_img§|:
+                                :|§uriMain§|:
                                 <br>
                             <p>:|§description§|:</p>
                         <span class="tm-text-green">Comments :|§nComments§|: - :|§dateCreated§|:</span>
