--- a/KazeWebPage/View/Uris_View/File_Uri_View.html
+++ b/KazeWebPage/View/Uris_View/File_Uri_View.html
@@ -1,6 +1,4 @@
 <a style="font-size:17px" href=":|§File_Uri§|:">
-    <div>
-        <img src= "https://i.postimg.cc/Z5ZYBBPB/HlrAzXK.png"  alt="file_image" height="60px" width="60px">
-        <p> :|§File_Name§|: </p>
-    </div>
+    <img class="mw-100" src="https://i.postimg.cc/Z5ZYBBPB/HlrAzXK.png" alt="Max-width 100%">
+    :|§File_Name§|: 
 </a>
