--- a/KazeWebPage/View/Uris_View/Img_Uri_View.html
+++ b/KazeWebPage/View/Uris_View/Img_Uri_View.html
@@ -1,1 +1,1 @@
-<img src= ":|§Img_Uri§|:"  alt="img_post" height="500px" width="500px">
+<img class="mw-100" src= ":|§Img_Uri§|:" alt="Max-width 100%">
