--- a/KazeWebPage/View/Post.html
+++ b/KazeWebPage/View/Post.html
@@ -1,21 +1,20 @@
-<div data-aos="zoom-in-up" class="slidein row tm-section-mb row align-items-center">
-    <div class="col-lg-8">
-        <div class="tm-timeline-item col-lg-11" align="center">
-            <div class="tm-timeline-item-inner">
-                <div class="tm-timeline-description-wrap" align="center">
-                    <div class="tm-bg-dark tm-timeline-description">
-                        <h3 class="tm-text-green tm-font-400">:|§title§|:</h3>
-                                :|§uriMain§|:
-                                <br>
-                            <p>:|§description§|:</p>
-                        <span class="tm-text-green">Comments :|§nComments§|: - :|§dateCreated§|:</span>
-                        <br>
-                        <span class="tm-text-green" style="font-size:13px">TAGS = :|§tags§|:</span>
-                        <p><a class="tm-text-green float-right" style="font-size:20px" href="">View full post</a></p>
-                        
-                    </div> 
-                </div> 
-            </div>
-        </div>
+
+
+<div class="card bg-dark" style="width: 18rem;">
+    <div class="card-body bg-dark">
+    <h4><span class="badge badge-danger">:|§isAdultContent§|:</span> :|§title§|: </h4>
+    </div class="justify-content-center">
+    :|§uriMain§|:
+    <div class="card-body bg-dark">
+        <p class="card-text bg-dark">:|§description§|:</p>
     </div>
- </div>
+    <ul class="list-group list-group-flush bg-dark">
+        <li class="list-group-item bg-dark">Cras justo odio</li>
+    </ul>
+    <div class="card-body bg-dark">
+        :|§dateCreated§|:
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+    </div>
+</div>
+</br>
