porco dio, messo gli oggetti post, ho spaccato, getnew testicoli

--- a/KazeWebPage/View/Post.html
+++ b/KazeWebPage/View/Post.html
@@ -1,16 +1,11 @@
-
-
-<div class="card bg-dark" style="width: 18rem;">
-    <div class="card-body bg-dark">
+<div data-aos="zoom-in-up" class="card bg-dark" style="width: 18rem;">
+    <div class="card-body bg-dark justify-content-center">
     <h4><span class="badge badge-danger">:|§isAdultContent§|:</span> :|§title§|: </h4>
-    </div class="justify-content-center">
+    </div>
     :|§uriMain§|:
     <div class="card-body bg-dark">
         <p class="card-text bg-dark">:|§description§|:</p>
     </div>
-    <ul class="list-group list-group-flush bg-dark">
-        <li class="list-group-item bg-dark">Cras justo odio</li>
-    </ul>
     <div class="card-body bg-dark">
         :|§dateCreated§|:
         <a href="#" class="card-link">Card link</a>
