--- a/KazeWebPage/View/Post.html
+++ b/KazeWebPage/View/Post.html
@@ -1,5 +1,5 @@
-<div data-aos="zoom-in-up" class="card bg-dark" style="width: 18rem;">
-    <div class="card-body bg-dark justify-content-center">
+<div data-aos="zoom-in-up" class="card text-center bg-dark justify-content-center" style="width: 18rem;">
+    <div class="card-body bg-dark  justify-content-center">
     <h4><span class="badge badge-danger">:|§isAdultContent§|:</span> :|§title§|: </h4>
     </div>
     :|§uriMain§|:
@@ -7,9 +7,10 @@
         <p class="card-text bg-dark">:|§description§|:</p>
     </div>
     <div class="card-body bg-dark">
-        :|§dateCreated§|:
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+        <span class="badge badge-light">
+            <strong>Tags:</strong> :|§tags§|:
+        </span>
+        <span class="badge badge-pill badge-light">Create Date: :|§dateCreated§|:</span>
     </div>
 </div>
 </br>
