--- a/KazeWebPage/View/Uris_View/File_Uri_View.html
+++ b/KazeWebPage/View/Uris_View/File_Uri_View.html
@@ -1,4 +1,3 @@
-<a style="font-size:17px" href=":|§File_Uri§|:">
-    <img class="mw-100" src="https://i.postimg.cc/Z5ZYBBPB/HlrAzXK.png" alt="Max-width 100%">
-    :|§File_Name§|: 
-</a>
+
+    <img class="mw-100" src="https://i.postimg.cc/Z5ZYBBPB/HlrAzXK.png" alt="Max-width 10%">
+    <p class="text-center"><a href=":|§File_Uri§|:" class="text-info">:|§File_Name§|:</a></p>
