Restyle, aggiunta libreria Fancyboox per le IMG, fix repalce value on html for multi replace, ecc margin: aggiunto html per aggiungere un post e il suo rispettivo codice(non ancora completo), ecc..

--- a/KazeWebPage/View/Uris_View/Img_Uri_View.html
+++ b/KazeWebPage/View/Uris_View/Img_Uri_View.html
@@ -1,1 +1,4 @@
-<img class="mw-100" src= ":|§Img_Uri§|:" alt="Max-width 100%">
+<!-- <img class="mw-100" src= ":|§Img_Uri§|:" alt="Max-width 100%"> -->
+<a href=":|§Img_Uri§|:" data-fancybox="images" data-caption="My caption">
+    <img src=":|§Img_Uri§|:" id="imgSelectMain" class="card-img" alt="Responsive image">
+</a>
