Aggiunto un nuovo controller.js che si occupera degli eventi e la loro gestione, PostContain impostato al centro definitivamente, create le diverse sezioni per permettere l'aggiunta dei nuovi post ecc.. fix minori

--- a/KazeWebPage/View/Post.html
+++ b/KazeWebPage/View/Post.html
@@ -1,16 +1,18 @@
-<div data-aos="zoom-in-up" class="card text-center bg-dark justify-content-center" style="width: 18rem;">
-    <div class="card-body bg-dark  justify-content-center">
-    <h4><span class="badge badge-danger">:|§isAdultContent§|:</span> :|§title§|: </h4>
-    </div>
-    :|§uriMain§|:
-    <div class="card-body bg-dark">
-        <p class="card-text bg-dark">:|§description§|:</p>
-    </div>
-    <div class="card-body bg-dark">
-        <span class="badge badge-light">
-            <strong>Tags:</strong> :|§tags§|:
-        </span>
-        <span class="badge badge-pill badge-light">Create Date: :|§dateCreated§|:</span>
+<div data-aos="zoom-in-up" class="row justify-content-center">
+    <div class="card text-center bg-dark justify-content-center" style="width: 46rem;">
+        <div class="card-body bg-dark justify-content-center">
+        <h4><span class="badge badge-danger">:|§isAdultContent§|:</span> :|§title§|: </h4>
+        </div>
+        :|§uriMain§|:
+        <div class="card-body bg-dark">
+            <p class="card-text bg-dark">:|§description§|:</p>
+        </div>
+        <div class="card-body bg-dark">
+            <span class="badge badge-light">
+                <strong>Tags:</strong> :|§tags§|:
+            </span>
+            <span class="badge badge-pill badge-light">Create Date: :|§dateCreated§|:</span>
+        </div>
     </div>
 </div>
-</br>
+<br/>
