--- a/css/override.css
+++ b/css/override.css
@@ -5,10 +5,24 @@
     src: local('Open Sans'), local('OpenSans'), url(./OpenSans.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000
 }
+body {
+    background-color: #333333;
+    color: #FFFFFF;
+    overflow-x: hidden;
+}
+section {
+    background-color: rgba(0, 0, 0, 0.700)!;
+    margin: 0;
+}
+
+#SectionAddPost {
+    visibility: hidden;
+    display: none;
+}
 
 #SectionPosts {
-    background-color: rgba(0, 0, 0, 0.700);
-    margin: 0;
+    visibility: visible;
+    display: inline;
 }
 
 footer p {
