Da sistemare il perche eleAddPost.style.visibility risulta null su StartUp.js

--- a/css/override.css
+++ b/css/override.css
@@ -15,14 +15,12 @@ section {
     margin: 0;
 }
 
-#SectionAddPost {
-    visibility: hidden;
-    display: none;
-}
-
 #SectionPosts {
     visibility: visible;
-    display: inline;
+}
+
+#SectionAddPost {
+    visibility: collapse;
 }
 
 footer p {
