--- a/KazeWebPage/View/FormAddPostDetail.html
+++ b/KazeWebPage/View/FormAddPostDetail.html
@@ -1,46 +1,32 @@
-<form class="bg-dark" data-aos="zoom-in-up">
-    <div class="form-row ">
-        <div class="form-group col-md-6">
-            <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+<form class="bg-dark" onsubmit="return false">
+        <div class="form-group">
+            <label for="inputTitle">TITLE</label>
+            <input type="email" class="form-control" id="inputTitle" placeholder="Insert Post Title">
         </div>
-        <div class="form-group col-md-6">
-            <label for="inputPassword4">Password</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-        </div>
+    <div class="form-group">
+        <div>ADD IMAGES/VIDEOS/FILES</div>
+        <div id="addURL"></div>
+            <div class="form-row text-center align-center">
+                <button class="btn-xs btn-success active" id="btnAddUri">Add File</button>
+                <button class="btn-xs btn-danger active" id="btnRemoveUri">Remove File</button>
+            </div>
     </div>
     <div class="form-group">
-        <label for="inputAddress">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        <label for="inputDescription">DESCRIPTION</label>
+        <textarea class="form-control" id="inputDescription" rows="5"></textarea>
     </div>
     <div class="form-group">
-        <label for="inputAddress2">Address 2</label>
-        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="inputCity">City</label>
-            <input type="text" class="form-control" id="inputCity">
-        </div>
-        <div class="form-group col-md-4">
-            <label for="inputState">State</label>
-            <select id="inputState" class="form-control">
-                <option selected>Choose...</option>
-                <option>...</option>
-            </select>
-        </div>
-        <div class="form-group col-md-2">
-            <label for="inputZip">Zip</label>
-            <input type="text" class="form-control" id="inputZip">
-        </div>
+            <label for="inputTags">TAGS</label>
+            <input type="text" class="form-control" id="inputTags" placeholder="Separate every tag with a ';'">
     </div>
     <div class="form-group">
         <div class="form-check">
+            <br>
             <input class="form-check-input" type="checkbox" id="gridCheck">
             <label class="form-check-label" for="gridCheck">
-                Check me out
+                18+ Content
             </label>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Sign in</button>
+    <button type="submit" class="btn btn-primary">Publish</button>
 </form>
