Ultimato funzionamento e css bottoni add url e remove url

--- a/KazeWebPage/View/FormAddPostDetail.html
+++ b/KazeWebPage/View/FormAddPostDetail.html
@@ -4,11 +4,14 @@
             <input type="email" class="form-control" id="inputTitle" placeholder="Insert Post Title">
         </div>
     <div class="form-group">
-        <div>ADD IMAGES/VIDEOS/FILES</div>
+        <p>ADD IMAGES/VIDEOS/FILES</p>
         <div id="addURL"></div>
-            <div class="form-row text-center align-center">
-                <button class="btn-xs btn-success active" id="btnAddUri">Add File</button>
-                <button class="btn-xs btn-danger active" id="btnRemoveUri">Remove File</button>
+            <div class="form-group">
+                <div class="text-center">
+                    <p></p>
+                    <button class="btn-xs btn-success active" id="btnAddUri">Add URL</button>
+                    <button class="btn-xs btn-danger active" disabled id="btnRemoveUri">Remove URL</button>
+                </div>
             </div>
     </div>
     <div class="form-group">
