--- a/KazeWebPage/View/FormAddPostDetail.html
+++ b/KazeWebPage/View/FormAddPostDetail.html
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
         <label for="inputDescription">DESCRIPTION</label>
-        <textarea class="form-control" id="inputDescription" rows="5"></textarea>
+        <textarea class="form-control" id="inputDescription" rows="5" placeholder="Post Text"></textarea>
     </div>
     <div class="form-group">
             <label for="inputTags">TAGS</label>
