--- a/css/override.css
+++ b/css/override.css
@@ -6,7 +6,7 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000
 }
 body {
-    background-color: #333333;
+    background-color: #1E1E1E ;
     color: #FFFFFF;
     overflow-x: hidden;
 }
@@ -17,6 +17,7 @@ section {
 
 #SectionPosts {
     visibility: visible;
+    background-color: #1E1E1E ;
 }
 
 #SectionAddPost {
