Nuova classe Facotry per la creazione di oggetti che contera tutti i vari controlli di validita, controlli statici che potranno essere utilizati

--- a/KazeWebPage/View/FormAddPostDetail.html
+++ b/KazeWebPage/View/FormAddPostDetail.html
@@ -9,11 +9,17 @@
             <div class="form-group">
                 <div class="text-center">
                     <p></p>
-                    <button class="btn-xs btn-success active" id="btnAddUri">Add URL</button>
-                    <button class="btn-xs btn-danger active" disabled id="btnRemoveUri">Remove URL</button>
+                    <div class="row">
+                        <div class="col">
+                            <button class="btn btn-success active" id="btnAddUri">Add URL</button>
+                        </div>
+                        <div class="col">
+                            <button class="btn btn-danger active" disabled id="btnRemoveUri">Remove URL</button>
+                        </div>
+                    </div>
                 </div>
             </div>
-    </div>
+        </div>
     <div class="form-group">
         <label for="inputDescription">DESCRIPTION</label>
         <textarea class="form-control" id="inputDescription" rows="5" placeholder="Post Text"></textarea>
