--- a/KazeWebPage/View/FormAddPostDetail.html
+++ b/KazeWebPage/View/FormAddPostDetail.html
@@ -1,39 +1,39 @@
 <form class="bg-dark" onsubmit="return false">
-        <div class="form-group">
-            <label for="inputTitle">TITLE</label>
-            <input type="email" class="form-control" id="inputTitle" placeholder="Insert Post Title">
-        </div>
+    <div class="form-group">
+        <label for="inputTitle">TITLE</label>
+        <input class="form-control" id="inputTitle" placeholder="Insert Post Title">
+    </div>
     <div class="form-group">
         <p>ADD IMAGES/VIDEOS/FILES</p>
         <div id="addURL"></div>
-            <div class="form-group">
-                <div class="text-center">
-                    <p></p>
-                    <div class="row">
-                        <div class="col">
-                            <button class="btn btn-success active" id="btnAddUri">Add URL</button>
-                        </div>
-                        <div class="col">
-                            <button class="btn btn-danger active" disabled id="btnRemoveUri">Remove URL</button>
-                        </div>
+        <div class="form-group">
+            <div class="text-center">
+                <p></p>
+                <div class="row">
+                    <div class="col">
+                        <button class="btn btn-success active" id="btnAddUri">Add URL</button>
+                    </div>
+                    <div class="col">
+                        <button class="btn btn-danger active" disabled id="btnRemoveUri">Remove URL</button>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     <div class="form-group">
         <label for="inputDescription">DESCRIPTION</label>
         <textarea class="form-control" id="inputDescription" rows="5" placeholder="Post Text"></textarea>
     </div>
     <div class="form-group">
-            <label for="inputTags">TAGS</label>
-            <input type="text" class="form-control" id="inputTags" placeholder="Separate every tag with a ';'">
+        <label for="inputTags">TAGS</label>
+        <input type="text" class="form-control" id="inputTags" placeholder="Separate every tag with a ';'">
     </div>
     <div class="form-group">
         <div class="form-check">
             <br>
-            <input class="form-check-input" type="checkbox" id="gridCheck">
-            <label class="form-check-label" for="gridCheck">
-                18+ Content
+            <input class="form-check-input" type="checkbox" id="inputIsAdultContent">
+            <label class="form-check-label" for="inputIsAdultContent">
+                <span class="badge badge-danger mr-sm-2">+18 Content(NSFW)</span>
             </label>
         </div>
     </div>
