--- a/KazeWebPage/View/FormAddPostDetail.html
+++ b/KazeWebPage/View/FormAddPostDetail.html
@@ -26,14 +26,14 @@
     </div>
     <div class="form-group">
         <label for="inputTags">TAGS</label>
-        <input type="text" class="form-control" id="inputTags" placeholder="Separate every tag with a ';'">
+        <input type="text" class="form-control" id="inputTags" placeholder="explicit; blood; tutorial; juicy;">
     </div>
     <div class="form-group">
         <div class="form-check">
             <br>
             <input class="form-check-input" type="checkbox" id="inputIsAdultContent">
             <label class="form-check-label" for="inputIsAdultContent">
-                <span class="badge badge-danger mr-sm-2">+18 Content(NSFW)</span>
+                <span class="badge badge-danger mr-sm-2">+18 Content (NSFW)</span>
             </label>
         </div>
     </div>
