Implementazione funzionamento blurring, FUNZIONANTE, un po porco, aggiunto il terzo switch, da programmare

--- a/KazeWebPage/View/Post.html
+++ b/KazeWebPage/View/Post.html
@@ -1,5 +1,5 @@
 <div data-aos="zoom-in-up" class="row justify-content-center">
-    <div class="card text-center bg-dark justify-content-center" style="width: 46rem;">
+    <div class=":|§blur§|: card text-center bg-dark justify-content-center" style="width: 46rem;">
         <div class="card-body bg-dark justify-content-center">
         <h4><span class="badge badge-danger">:|§isAdultContent§|:</span> :|§title§|: </h4>
         </div>
