--- a/KazeWebPage/View/FormAdvSearch.html
+++ b/KazeWebPage/View/FormAdvSearch.html
@@ -1,3 +1,32 @@
 <form class="bg-dark" onsubmit="return false">
-<span>SAS</span>
+    <div class="form-group">
+        <label for="inputUIS">Unique ID Search</label>
+        <input class="form-control" id="inputUIS" placeholder="Insert Title or Description keywords to find posts">
+    </div>
+    <div class="form-group">
+        <label for="inputTDK">Title or Description Keywords</label>
+        <input class="form-control" id="inputTDK" placeholder="Insert Title or Description keywords to find posts">
+    </div>
+    <div class="form-group">
+        <label for="inputCDP">Creation Date</label>
+          <input class="form-control" type="date" id="inputCDP">
+    </div>
+    <div class="form-group">
+        <label for="inputCTP">Creation Time</label>
+        <input class="form-control" type="time" id="inputCTP">
+    </div>
+    <div class="form-group">
+        <label for="inputT">TAGS</label>
+        <input class="form-control" id="inputT" placeholder="nude; sport; nice; holidays;">
+    </div>
+    <div class="form-group">
+        <div class="form-check">
+            <br>
+            <input class="form-check-input" type="checkbox" id="inputNSFW">
+            <label class="form-check-label" for="inputNSFW">
+                <span class="badge badge-danger mr-sm-2">+18 Content (NSFW)</span>
+            </label>
+        </div>
+    </div>
+    <button type="submit" class="btn btn-secondary">Search</button>
 </form>
