Aggiunto tasto VIEW FULL POST provvisorio, aggiunto badge per numero dei commenti nei post della home

--- a/KazeWebPage/View/FormAdvSearch.html
+++ b/KazeWebPage/View/FormAdvSearch.html
@@ -32,7 +32,7 @@
             <br>
             <input class="form-check-input" type="checkbox" id="inputNSFW">
             <label class="form-check-label" for="inputNSFW">
-                <span class="badge badge-danger mr-sm-2">+18 Content Filter (NSFW)</span>
+                <span class="badge badge-danger">+18 Content Filter (NSFW)</span>
             </label>
         </div>
     </div>
