--- a/KazeWebPage/View/Post.html
+++ b/KazeWebPage/View/Post.html
@@ -12,6 +12,8 @@
                 <strong>Tags:</strong> :|§tags§|:
             </span>
             <span class="badge badge-pill badge-light">Create Date: :|§dateCreated§|:</span>
+            <span class="badge badge-pill badge-light">Comments: </span>  
+            <a href="#"><h5><span id="ViewFullPost" class="badge badge-pill badge-secondary mt-2">VIEW FULL POST</span></h5></a>
         </div>
     </div>
 </div>
