--- a/css/override.css
+++ b/css/override.css
@@ -20,6 +20,11 @@ section {
     background-color: #1E1E1E ;
 }
 
+#ViewFullPost {
+    color: #ffc61a;
+    background-color: #a6c;
+}
+
 .blur{
     filter: blur(20px);
 }
