Messo a posto l'html dei file, aggiunto numero commenti nella home, fixato qualche bug di visione

--- a/KazeWebPage/View/Uris_View/File_Uri_View.html
+++ b/KazeWebPage/View/Uris_View/File_Uri_View.html
@@ -1,3 +1,6 @@
 
-    <img class="mw-100" src="https://i.postimg.cc/Z5ZYBBPB/HlrAzXK.png" alt="Max-width 10%">
-    <p class="text-center"><a href=":|§File_Uri§|:" class="text-info">:|§File_Name§|:</a></p>
+<p class="text-center">
+    <a href=":|§File_Uri§|:" class="text-info"><img class="mx-auto w-25" src="https://i.postimg.cc/Z5ZYBBPB/HlrAzXK.png" alt="file_img"><br>
+    :|§File_Name§|:</a>
+</p>
+
