--- a/KazeWebPage/View/Post.html
+++ b/KazeWebPage/View/Post.html
@@ -4,15 +4,13 @@
         <h4><span class="badge badge-danger">:|§isAdultContent§|:</span> :|§title§|: </h4>
         </div>
         :|§uriMain§|:
+        <span class="card-text bg-dark">:|§description§|:</span>
         <div class="card-body bg-dark">
-            <p class="card-text bg-dark">:|§description§|:</p>
-        </div>
-        <div class="card-body bg-dark">
+            <span class="badge badge-pill badge-light">Comments: :|§nComments§|:</span>
+            <span class="badge badge-pill badge-light">Create Date: :|§dateCreated§|:</span>  
             <span class="badge badge-light">
                 <strong>Tags:</strong> :|§tags§|:
             </span>
-            <span class="badge badge-pill badge-light">Create Date: :|§dateCreated§|:</span>
-            <span class="badge badge-pill badge-light">Comments: </span>  
             <a href="#"><h5><span id="ViewFullPost" class="badge badge-pill badge-secondary mt-2">VIEW FULL POST</span></h5></a>
         </div>
     </div>
