Fixato bug per cui se disattivato NSFW quando c'era attivato anche Just NSFW continuava a mostrarmi solo i post per adulti

--- a/KazeWebPage/View/Post.html
+++ b/KazeWebPage/View/Post.html
@@ -11,7 +11,7 @@
             <span class="badge badge-light">
                 <strong>Tags:</strong> :|§tags§|:
             </span>
-            <a href="#"><h5><span id="ViewFullPost" class="badge badge-pill badge-secondary mt-2">VIEW FULL POST</span></h5></a>
+            <h5><span id=":|§detailID§|:" class="badge badge-pill badge-secondary mt-2 ViewFullPost">VIEW FULL POST</span></h5>
         </div>
     </div>
 </div>
