Aggiunto overlay sui post blurrati che ti dice cosa fare per togliere il blur, interamente funzionante

--- a/KazeWebPage/View/Post.html
+++ b/KazeWebPage/View/Post.html
@@ -1,4 +1,8 @@
 <div data-aos="zoom-in-up" class="row justify-content-center">
+    <div class=":|§adviceText§|:">
+        *ADULT CONTENT*<br>
+        &nbsp;Enable the NSFW switch to see it&nbsp;
+    </div>
     <div class=":|§blur§|: card text-center bg-dark justify-content-center" style="width: 46rem;">
         <div class="card-body bg-dark justify-content-center">
         <h4><span class="badge badge-danger">:|§isAdultContent§|:</span> :|§title§|: </h4>
@@ -13,6 +17,6 @@
             </span>
             <h5><span id=":|§detailID§|:" class="badge badge-pill badge-secondary mt-2 ViewFullPost">VIEW FULL POST</span></h5>
         </div>
-    </div>
+</div>
 </div>
 <br/>
